refactor: add exception